--- a/flowChartCanvas.html
+++ b/flowChartCanvas.html
@@ -52,5 +52,5 @@
         </div>
 
     </body>
-    <script src='js\script.js'></script>
+    <script src='js\flowChartScript.js'></script>
 </html>
