--- a/scatterD3iris.html
+++ b/scatterD3iris.html
@@ -6,15 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://d3js.org/d3.v6.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script> -->
     <title>الرسام</title>
     <style>
+        text{
+            font-size: 12pt;
+            fill: black;
+        }
+
+        .axis path, .axis line {
+            fill:none;
+            stroke: #000;
+            shape-rendering: crispEdges;
+        }
+
+        .axis .label {
+            font-size: 18pt;
+            fill: black;
+        }
     </style>
 </head>
 <body>
     <h3 class="text-center bg-primary text-white">Scatter Plot Using D3</h3>
     <div id="main" class="p-3">
     </div>
-    <script src="js\scatterD3Script.js"></script>
+    <script src="js\scatterD3IRISScript.js"></script>
 </body>
 </html>
