--- a/scatterD3iris.html
+++ b/scatterD3iris.html
@@ -29,6 +29,7 @@
     <h3 class="text-center bg-primary text-white">Scatter Plot Using D3</h3>
     <div id="main" class="p-3">
     </div>
+    <script src="js\scatter.js"></script>
     <script src="js\scatterD3IRISScript.js"></script>
 </body>
 </html>
