--- a/scatterD3iris.html
+++ b/scatterD3iris.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://d3js.org/d3.v6.min.js"></script>
     <title>الرسام</title>
     <style>
         text{
@@ -27,8 +26,8 @@
 </head>
 <body>
     <h3 class="text-center bg-primary text-white">Scatter Plot Using D3</h3>
-    <div id="main" class="p-3">
-    </div>
+    <div id="main" class="container-fluid p-3 col-sm-12"></div>
+    <script src="js/d3.v6.min.js"></script>
     <script src="js\scatter.js"></script>
     <script src="js\scatterD3IRISScript.js"></script>
 </body>
