--- a/barD3.html
+++ b/barD3.html
@@ -7,10 +7,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>Scatter Plot Using D3</title>
     <style>
-        text{
-            fill: black;
-        }
-
         input:invalid{
             background-color: brown;
             color: white;
@@ -57,7 +53,7 @@
 
     <div id="filePathDiv">
         <label for="filePath" class="form-control">File Path</label>
-        <input type="text" name="filePath" id="filePath" class="form-control" value="https://raw.githubusercontent.com/curran/data/gh-pages/all/iris_iris.csv" onchange="loadingFile()">
+        <input type="text" name="filePath" id="filePath" class="form-control" value="https://raw.githubusercontent.com/holtzy/data_to_viz/master/Example_dataset/7_OneCatOneNum_header.csv" onchange="loadingFile()">
     </div>
 
     <hr>
@@ -73,60 +69,15 @@
         <label for="drawingHeight" class="form-control">Drawing Height</label>
         <input type="number" min=100 name="drawingHeight" id="drawingHeight" class="form-control" value=450 onchange="draw()">
 
-        <label for="xAxisScale" class="form-control">xAxis Scale</label>
-        <select name="xAxisScale" id="xAxisScale" class="form-control" onchange="draw()">
-            <option value="scaleLinear">Linear</option>
-            <option value="scaleLog">Log</option>
-            <option value="scalePow">Power</option>
-            <option value="scaleSqrt">Square Root</option>
-            <option value="scaleSymlog">Symbol Log</option>
-            <option value="scaleRadial">Radial</option>
-            <option value="scaleTime">Time</option>
-        </select>
-
-        <label for="yAxisScale" class="form-control">yAxis Scale</label>
-        <select name="yAxisScale" id="yAxisScale" class="form-control" onchange="draw()">
-            <option value="scaleLinear">Linear</option>
-            <option value="scaleLog">Log</option>
-            <option value="scalePow">Power</option>
-            <option value="scaleSqrt">Square Root</option>
-            <option value="scaleSymlog">Symbol Log</option>
-            <option value="scaleRadial">Radial</option>
-        </select>
-
-        <label for="xAxisTickFormat" class="form-control">xAxis Tick Format</label>
-        <select name="xAxisTickFormat" id="xAxisTickFormat" class="form-control" onchange="draw()">
-            <option value="null">No Format</option>
-            <option value="=.0f">Year</option>
-            <option value="=~s">Long Numbers</option>
-            <option value="=$~s">Accounting</option>
-            <option value="=.1%">Percentage</option>
-            <option value="=~e">Scientific</option>
-        </select>
-
         <label for="yAxisTickFormat" class="form-control">yAxis Tick Format</label>
         <select name="yAxisTickFormat" id="yAxisTickFormat" class="form-control" onchange="draw()">
-            <option value="null">No Format</option>
+            <option value="null">Auto</option>
+            <option value=",.0f">Normal</option>
             <option value="=.0f">Year</option>
             <option value="=~s">Long Numbers</option>
             <option value="=$~s">Accounting</option>
             <option value="=.1%">Percentage</option>
             <option value="=~e">Scientific</option>
-        </select>
-
-        <label for="circleRadius" class="form-control">Circle Radius</label>
-        <input type="number" name="circleRadius" min=0 id="circleRadius" class="form-control" value=5 onchange="draw()">
-
-        <label for="circleOpacity" class="form-control">Circle Opacity</label>
-        <input type="number" name="circleOpacity" id="circleOpacity" class="form-control" min=0 max=1 step=0.05 value=0.5 onchange="draw()">
-
-        <label for="circleColor" class="form-control">Circle Color</label>
-        <input type="color" name="circleColor" id="circleColor" class="form-control" onchange="draw()">
-
-        <label for="legendLocation" class="form-control">Legend Location</label>
-        <select name="legendLocation" id="legendLocation" class="form-control" onchange="draw()">
-            <option value="topRight">Top Right</option>
-            <option value="bottomRight">Bottom Right</option>
         </select>
 
         <label for="svgBackgroundColor" class="form-control">Background Color</label>
@@ -141,6 +92,6 @@
     <div id="drawingArea"></div>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="js\d3DrawWithConfiguration.js"></script>
-    <script src="js\scatterD3IRISScript.js"></script>
+    <script src="js\barD3Script.js"></script>
 </body>
 </html>
