--- a/histogramD3.html
+++ b/histogramD3.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <title>Scatter Plot Using D3</title>
+    <title>Histogram Plot Using D3</title>
     <style>
         input:invalid{
             background-color: brown;
             color: white;
+        }
+
+        text{
+            fill:black;
         }
 
         #InputGroup label{
@@ -53,7 +57,7 @@
 
     <div id="filePathDiv">
         <label for="filePath" class="form-control">File Path</label>
-        <input type="text" name="filePath" id="filePath" class="form-control" value="https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/iris.csv" onchange="loadingFile()">
+        <input type="text" name="filePath" id="filePath" class="form-control" value="https://raw.githubusercontent.com/curran/data/gh-pages/all/iris_iris.csv" onchange="loadingFile()">
     </div>
 
     <hr>
@@ -82,6 +86,9 @@
 
         <label for="svgBackgroundColor" class="form-control">Background Color</label>
         <input type="color" name="svgBackgroundColor" id="svgBackgroundColor" class="form-control" onchange="draw()" value="#f2f2f2">
+
+        <label for="xAxisMax" class="form-control">xAxis Max</label>
+        <input type="number" min=0 name="xAxisMax" id="xAxisMax" class="form-control" value=0 onchange="draw()">
     </div>
 
     <hr>
